<resources>
    <string name="app_name">Dungeons and Homework</string>
    <string name="testButton">Test Timer</string>
    <string name="shopMenuButtonText">Shop Menu</string>
    <string name="statsMenuResourceText">Stats Menu</string>
    <string name="firstBossButtonText">First Boss</string>
    <string name="quitButtonText">Quit</string>
    <string name="statsButtonText">Stats</string>
    <string name="shopButtonText">Shop</string>
    <string name="bossesButtonText">Bosses</string>
    <string name="fightButtonText">Fight (25)</string>
    <string name="timerText">Timer</string>
    <string name="stopButtonText">Stop</string>
    <string name="bossHealthText">Health:</string>
    <string name="buyButtonText">Buy</string>
    <string name="cancelButtonText">Cancel</string>
    <string name="buyItemPrompt">Buy how many?</string>
    <string name="usePotionButtonText">Potion</string>
</resources>
